# wu

./: README.md  vmalloc.py
CCE2025/brood/: solve.py
CCE2025/double/: output.txt.bak  solve.py
CCE2025/saw/: gay.py  q.py  r.py  s.py  solve.py  t.py
CCE2025F/kbbb/: defence.png.CCE2025  flag.png.CCE2025  gamble.sage  gamble.sage.py  test1.py  test2.py  test3.py
FlareOn12/: README.md
YISF2025/angrybird/: solve.py
YISF2025/applelephant/: make.py  solve.py
YISF2025/camera/: firmware_decrypt.py  shc.py  shc_11.py  shc_decoded.txt  solve.py  solve1.py
YISF2025/frr2ma/: chall.py  output.txt  solve.py
YISF2025/microcode/: diss.py  diss.txt  ops.py  solve.py
YISF2025/sstegano/: flag.txt  solve0.py
YISF2025/too_many_functions/: solve.py
YISF2025/verifier/: solve.py
YISF2025/wallet/: solve.py
YISF2025_Finals/james/: f.py  g.py
YISF2025_Finals/late/: extract.py  solve.py  test.py
YISF2025_Finals/m2protector/: solve.py
cce2024q/B2T/: akali.py  flag.txt.encode  plain.txt  plain.txt.base58  plain.txt.base62  plain.txt.encode
cce2024q/asdf/: akali.py  irelia.py  yasuo.py
cce2024q/autorev/: akali.py  binary  sample0  sample1  sample2  sample3  sample4
cce2024q/dying/: DyingMessage  akali.py
cce2024q/id/: Intels_Dream
ccef/: 1.sage  1.sage.py  a.py  akali.sage  akali.sage.py  r.sage  r.sage.py
cg2025/: C0D3Matrix.py  chas_elf.py  initial.py  webbinary.py
dreamhack/: vmalloc3.py
mine/akasha/: CMakeLists.txt  README.md
mine/akasha/src/: main.cpp  sha.hpp
mine/akasha/tools/: crack_akasha.py  solve.py
snake2025/: odnet_nin.py
(+458 files in other folders)
